sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                                   | **Description**                                                                                                                                                                                        |
| ------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [arcSettingsCreateIdentitySample.js][arcsettingscreateidentitysample]                                                           | Create Aad identity for arc settings. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/CreateArcIdentity.json                       |
| [arcSettingsCreateSample.js][arcsettingscreatesample]                                                                           | Create ArcSetting for HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/PutArcSetting.json                              |
| [arcSettingsDeleteSample.js][arcsettingsdeletesample]                                                                           | Delete ArcSetting resource details of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/DeleteArcSetting.json           |
| [arcSettingsGeneratePasswordSample.js][arcsettingsgeneratepasswordsample]                                                       | Generate password for arc settings. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/GeneratePassword.json                          |
| [arcSettingsGetSample.js][arcsettingsgetsample]                                                                                 | Get ArcSetting resource details of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/GetArcSetting.json                 |
| [arcSettingsListByClusterSample.js][arcsettingslistbyclustersample]                                                             | Get ArcSetting resources of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/ListArcSettingsByCluster.json             |
| [arcSettingsUpdateSample.js][arcsettingsupdatesample]                                                                           | Update ArcSettings for HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/PatchArcSetting.json                           |
| [clustersCreateIdentitySample.js][clusterscreateidentitysample]                                                                 | Create cluster identity. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/CreateClusterIdentity.json                                |
| [clustersCreateSample.js][clusterscreatesample]                                                                                 | Create an HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/CreateCluster.json                                          |
| [clustersDeleteSample.js][clustersdeletesample]                                                                                 | Delete an HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/DeleteCluster.json                                          |
| [clustersGetSample.js][clustersgetsample]                                                                                       | Get HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/GetCluster.json                                                   |
| [clustersListByResourceGroupSample.js][clusterslistbyresourcegroupsample]                                                       | List all HCI clusters in a resource group. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/ListClustersByResourceGroup.json        |
| [clustersListBySubscriptionSample.js][clusterslistbysubscriptionsample]                                                         | List all HCI clusters in a subscription. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/ListClustersBySubscription.json           |
| [clustersUpdateSample.js][clustersupdatesample]                                                                                 | Update an HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/UpdateCluster.json                                          |
| [clustersUploadCertificateSample.js][clustersuploadcertificatesample]                                                           | Upload certificate. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/UploadCertificate.json                                         |
| [createArcExtension.js][createarcextension]                                                                                     | Create Extension for HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/PutExtension.json                                |
| [createArcSetting.js][createarcsetting]                                                                                         | Create ArcSetting for HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/PutArcSetting.json                              |
| [createCluster.js][createcluster]                                                                                               | Create an HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/CreateCluster.json                                          |
| [deleteArcExtension.js][deletearcextension]                                                                                     | Delete particular Arc Extension of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/DeleteExtension.json               |
| [deleteArcSetting.js][deletearcsetting]                                                                                         | Delete ArcSetting resource details of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/DeleteArcSetting.json           |
| [deleteCluster.js][deletecluster]                                                                                               | Delete an HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/DeleteCluster.json                                          |
| [extensionsCreateSample.js][extensionscreatesample]                                                                             | Create Extension for HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/PutExtension.json                                |
| [extensionsDeleteSample.js][extensionsdeletesample]                                                                             | Delete particular Arc Extension of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/DeleteExtension.json               |
| [extensionsGetSample.js][extensionsgetsample]                                                                                   | Get particular Arc Extension of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/GetExtension.json                     |
| [extensionsListByArcSettingSample.js][extensionslistbyarcsettingsample]                                                         | List all Extensions under ArcSetting resource. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/ListExtensionsByArcSetting.json     |
| [extensionsUpdateSample.js][extensionsupdatesample]                                                                             | Update Extension for HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/PatchExtension.json                              |
| [getArcSetting.js][getarcsetting]                                                                                               | Get ArcSetting resource details of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/GetArcSetting.json                 |
| [getArcSettingsExtension.js][getarcsettingsextension]                                                                           | Get particular Arc Extension of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/GetExtension.json                     |
| [getCluster.js][getcluster]                                                                                                     | Get HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/GetCluster.json                                                   |
| [listArcSettingResourcesByHciCluster.js][listarcsettingresourcesbyhcicluster]                                                   | Get ArcSetting resources of HCI Cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/ListArcSettingsByCluster.json             |
| [listClustersInAGivenResourceGroup.js][listclustersinagivenresourcegroup]                                                       | List all HCI clusters in a resource group. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/ListClustersByResourceGroup.json        |
| [listClustersInAGivenSubscription.js][listclustersinagivensubscription]                                                         | List all HCI clusters in a subscription. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/ListClustersBySubscription.json           |
| [listExtensionsUnderArcSettingResource.js][listextensionsunderarcsettingresource]                                               | List all Extensions under ArcSetting resource. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/ListExtensionsByArcSetting.json     |
| [listOperationsAvailableWithTheMicrosoftAzureStackHciProvider.js][listoperationsavailablewiththemicrosoftazurestackhciprovider] | List all available Microsoft.AzureStackHCI provider operations x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/ListOperations.json |
| [operationsListSample.js][operationslistsample]                                                                                 | List all available Microsoft.AzureStackHCI provider operations x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-05-01/examples/ListOperations.json |
| [updateArcExtension.js][updatearcextension]                                                                                     | Update Extension for HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/PatchExtension.json                              |
| [updateCluster.js][updatecluster]                                                                                               | Update an HCI cluster. x-ms-original-file: specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2022-01-01/examples/UpdateCluster.json                                          |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node arcSettingsCreateIdentitySample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node arcSettingsCreateIdentitySample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[arcsettingscreateidentitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/arcSettingsCreateIdentitySample.js
[arcsettingscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/arcSettingsCreateSample.js
[arcsettingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/arcSettingsDeleteSample.js
[arcsettingsgeneratepasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/arcSettingsGeneratePasswordSample.js
[arcsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/arcSettingsGetSample.js
[arcsettingslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/arcSettingsListByClusterSample.js
[arcsettingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/arcSettingsUpdateSample.js
[clusterscreateidentitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/clustersCreateIdentitySample.js
[clusterscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/clustersCreateSample.js
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/clustersDeleteSample.js
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/clustersGetSample.js
[clusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/clustersListByResourceGroupSample.js
[clusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/clustersListBySubscriptionSample.js
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/clustersUpdateSample.js
[clustersuploadcertificatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/clustersUploadCertificateSample.js
[createarcextension]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/createArcExtension.js
[createarcsetting]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/createArcSetting.js
[createcluster]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/createCluster.js
[deletearcextension]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/deleteArcExtension.js
[deletearcsetting]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/deleteArcSetting.js
[deletecluster]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/deleteCluster.js
[extensionscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/extensionsCreateSample.js
[extensionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/extensionsDeleteSample.js
[extensionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/extensionsGetSample.js
[extensionslistbyarcsettingsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/extensionsListByArcSettingSample.js
[extensionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/extensionsUpdateSample.js
[getarcsetting]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/getArcSetting.js
[getarcsettingsextension]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/getArcSettingsExtension.js
[getcluster]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/getCluster.js
[listarcsettingresourcesbyhcicluster]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/listArcSettingResourcesByHciCluster.js
[listclustersinagivenresourcegroup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/listClustersInAGivenResourceGroup.js
[listclustersinagivensubscription]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/listClustersInAGivenSubscription.js
[listextensionsunderarcsettingresource]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/listExtensionsUnderArcSettingResource.js
[listoperationsavailablewiththemicrosoftazurestackhciprovider]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/listOperationsAvailableWithTheMicrosoftAzureStackHciProvider.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/operationsListSample.js
[updatearcextension]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/updateArcExtension.js
[updatecluster]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/azurestackhci/arm-azurestackhci/samples/v3/javascript/updateCluster.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-azurestackhci?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/azurestackhci/arm-azurestackhci/README.md
